Preparing For Release - add proguard rules - tweak gitignore's - change UserAuthorizationInfo class' name to UserAndTokens

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,9 @@ android {
     }
 
     buildTypes {
-
         release {
             applicationIdSuffix ".release"
+            debuggable false
             minifyEnabled true
             shrinkResources true
             //proguard obfuscates code and makes decompiling harder
