--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.muchen.tweetstormandroid">
+    package="com.muchen.tweetstormmaker">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
@@ -10,14 +10,14 @@
         android:roundIcon="@mipmap/icon_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="com.muchen.tweetstormandroid.views.DraftViewActivity">
+        <activity android:name="com.muchen.tweetstormmaker.views.DraftViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.muchen.tweetstormandroid.views.DraftEditActivity">
+        <activity android:name="com.muchen.tweetstormmaker.views.DraftEditActivity">
 
         </activity>
     </application>
